--- a/ACM_General/home/static/home/css/index.css
+++ b/ACM_General/home/static/home/css/index.css
@@ -37,35 +37,47 @@
 /* line 30, ../scss/index.scss */
 .flier-space {
   height: 100%;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-shrink: 0;
 }
 
-/* line 35, ../scss/index.scss */
+/* line 40, ../scss/index.scss */
 .flier-space img {
   height: 100%;
+  flex-shrink: 0;
 }
 
-/* line 39, ../scss/index.scss */
+/* line 45, ../scss/index.scss */
 .event-wrapper:nth-child(even) .event-card .flier-space img {
   margin-left: 10px;
 }
 
-/* line 43, ../scss/index.scss */
+/* line 49, ../scss/index.scss */
 .flier-info {
+  display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
   flex-direction: column;
+  white-space: pre-line;
+  flex: 1 1 auto;
   justify-content: center;
   margin-left: 20px;
 }
 
-/* line 50, ../scss/index.scss */
+/* line 62, ../scss/index.scss */
 .flier-info h2 {
   color: rgba(0, 0, 0, 0.87);
   font-weight: normal;
   line-height: 25px;
 }
 
-/* line 56, ../scss/index.scss */
+/* line 68, ../scss/index.scss */
 .flier-info p {
   color: rgba(0, 0, 0, 0.7);
   font-size: 16px;
@@ -74,48 +86,104 @@
 
 @media (max-width: 641px) {
   /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */
-  /* line 64, ../scss/index.scss */
+  /* line 76, ../scss/index.scss */
   .event-card {
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
     flex-direction: column;
     height: 750px;
   }
 
-  /* line 69, ../scss/index.scss */
+  /* line 83, ../scss/index.scss */
   .event-card .flier-space img {
     margin: auto !important;
   }
 
-  /* line 73, ../scss/index.scss */
+  /* line 87, ../scss/index.scss */
+  .flier-info {
+    margin: 0;
+  }
+
+  /* line 91, ../scss/index.scss */
   .flier-info h2 {
     margin-left: 0;
     text-align: center;
   }
 
-  /* line 78, ../scss/index.scss */
+  /* line 96, ../scss/index.scss */
   .flier-info p {
     margin-left: 15px;
     margin-right: 15px;
   }
 
-  /* line 83, ../scss/index.scss */
+  /* line 101, ../scss/index.scss */
   .flier-info a {
     margin-left: 15px;
   }
 
-  /* line 87, ../scss/index.scss */
+  /* line 105, ../scss/index.scss */
   .event-wrapper:nth-child(even) .event-card {
     flex-direction: column !important;
+    -webkit-flex-direction: column !important;
+    -ms-flex-direction: column !important;
   }
 
-  /* line 91, ../scss/index.scss */
+  /* line 111, ../scss/index.scss */
   .event-wrapper:nth-child(even) .flier-space {
     margin-right: 0;
     margin-left: 0 !important;
   }
 
-  /* line 96, ../scss/index.scss */
+  /* line 116, ../scss/index.scss */
   .flier-space {
     height: 400px;
     margin-right: 0;
   }
+}
+/* line 123, ../scss/index.scss */
+html[data-useragent*='MSIE 10.0'] .event-card {
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -ms-flex-align: center;
+  height: 750px;
+}
+/* line 131, ../scss/index.scss */
+html[data-useragent*='MSIE 10.0'] .event-card .flier-space img {
+  margin: auto !important;
+}
+/* line 135, ../scss/index.scss */
+html[data-useragent*='MSIE 10.0'] .flier-info {
+  max-width: 600px;
+  margin: auto;
+}
+/* line 140, ../scss/index.scss */
+html[data-useragent*='MSIE 10.0'] .flier-info h2 {
+  margin-left: 0;
+  text-align: center;
+}
+/* line 145, ../scss/index.scss */
+html[data-useragent*='MSIE 10.0'] .flier-info p {
+  margin-left: 15px;
+  margin-right: 15px;
+}
+/* line 150, ../scss/index.scss */
+html[data-useragent*='MSIE 10.0'] .flier-info a {
+  margin-left: 15px;
+}
+/* line 154, ../scss/index.scss */
+html[data-useragent*='MSIE 10.0'] .event-wrapper:nth-child(even) .event-card {
+  flex-direction: column !important;
+  -webkit-flex-direction: column !important;
+  -ms-flex-direction: column !important;
+}
+/* line 160, ../scss/index.scss */
+html[data-useragent*='MSIE 10.0'] .event-wrapper:nth-child(even) .flier-space {
+  margin-right: 0;
+  margin-left: 0 !important;
+}
+/* line 165, ../scss/index.scss */
+html[data-useragent*='MSIE 10.0'] .flier-space {
+  height: 400px;
+  margin-right: 0;
 }
