--- a/ACM_General/home/static/home/css/404.css
+++ b/ACM_General/home/static/home/css/404.css
@@ -11,39 +11,47 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -moz-font-feature-settings: "liga" on;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
   flex-direction: column;
   align-items: center;
 }
 
-/* line 17, ../scss/404.scss */
+/* line 21, ../scss/404.scss */
 .top-content {
-  /*margin: auto;*/
   width: 100%;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
   background-color: #f1f1f1;
+  -ms-flex-align: end;
   align-items: flex-end;
   height: 50%;
 }
 
-/* line 26, ../scss/404.scss */
+/* line 32, ../scss/404.scss */
 .bottom-content {
-  /*margin: auto;*/
   width: 100%;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
   background-color: #fff;
+  -ms-flex-align: start;
   align-items: flex-start;
   height: 50%;
 }
 
-/* line 35, ../scss/404.scss */
+/* line 43, ../scss/404.scss */
 .container {
   width: 700px;
   margin: 0 auto;
   padding: 0 5px;
 }
 
-/* line 41, ../scss/404.scss */
+/* line 49, ../scss/404.scss */
 h1 {
   width: 700px;
   padding: 0 5px;
@@ -54,18 +62,18 @@ h1 {
   line-height: 190px;
 }
 
-/* line 51, ../scss/404.scss */
+/* line 59, ../scss/404.scss */
 h2 {
   font-weight: normal;
 }
 
-/* line 55, ../scss/404.scss */
+/* line 63, ../scss/404.scss */
 a {
   position: relative;
   display: inline-block;
 }
 
-/* line 60, ../scss/404.scss */
+/* line 68, ../scss/404.scss */
 a:nth-of-type(2) {
   margin-left: 10px;
 }
