--- a/ACM_General/events/templates/events/create-event.html
+++ b/ACM_General/events/templates/events/create-event.html
@@ -7,8 +7,8 @@
 
 {% block head_stylesheets %}
     <link rel="stylesheet" type="text/css" href="{% static "events/css/create-event.css" %}" />
-    <link rel="stylesheet" href="https://unpkg.com/flatpickr/dist/flatpickr.min.css">
-    <link rel="stylesheet" type="text/css" href="{% static "events/css/material_blue.css" %}" />
+    <link rel="stylesheet" type="text/css" href="https://unpkg.com/flatpickr/dist/flatpickr.min.css">
+    <link rel="stylesheet" type="text/css" href="https://npmcdn.com/flatpickr/dist/themes/material_blue.css">
 {% endblock %}
 
 {% block head_javascript %}
