--- a/ACM_General/events/static/events/css/create-event.css
+++ b/ACM_General/events/static/events/css/create-event.css
@@ -1,8 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Noto+Sans');
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400');
 
 body, html {
-    font-family: 'Noto Sans', sans-serif;
+    font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
     background-color: white;
