[FIX] Fixed mistyped and broken links / emails

--- a/ACM_General/home/templates/home/officers.html
+++ b/ACM_General/home/templates/home/officers.html
@@ -48,7 +48,7 @@
        Involvement - ACM General, SIG-Game
       </div>
       <div class="card__links">
-       <a href="https://linkedin/in/henrycwong"
+       <a href="https://www.linkedin.com/in/henrycwong"
         class="acm-btn">LinkedIn</a>
        <a href="mailto:hcwqk7@mst.edu"
         class="acm-btn">Email</a>
@@ -72,7 +72,7 @@
       <div class="card__links">
        <a href="https://www.linkedin.com/in/katrina-ward-57131575/"
          class="acm-btn">LinkedIn</a>
-       <a href="mailto:kjw36b@mst.edu"
+       <a href="mailto:kjw26b@mst.edu"
         class="acm-btn">Email</a>
       </div>
      </div>
@@ -114,9 +114,7 @@
        Involvement - ACM General, SIG-Security, SIG-Comp
       </div>
       <div class="card__links">
-       <a href="https://www.linkedin.com/in/eric-michalak-400907137/"
-        class="acm-btn">LinkedIn</a>
-       <a href="mailto:esmxv3@mst.edu"
+       <a href="mailto:ane3md@mst.edu"
         class="acm-btn">Email</a>
       </div>
      </div>
@@ -180,7 +178,7 @@
       <div class="card__links">
        <!--<a href="https://www.linkedin.com/in/schoonoverkevin/"
          class="acm-btn">LinkedIn</a>-->
-       <a href="mailto:vjkgz@mst.edu"
+       <a href="mailto:vjkgz3@mst.edu"
         class="acm-btn">Email</a>
       </div>
     </li>
