--- a/ACM_General/home/static/home/scss/404.scss
+++ b/ACM_General/home/static/home/scss/404.scss
@@ -15,6 +15,8 @@ body {
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-align-items: center;
+    -ms-flex-align: center;
   align-items: center;
 }
 
@@ -24,7 +26,8 @@ body {
   display: -webkit-flex;
   display: flex;
   background-color: #f1f1f1;
-  -ms-flex-align: end;
+  -webkit-align-items: flex-end;
+    -ms-flex-align: end;
   align-items: flex-end;
   height: 50%;
 }
@@ -35,6 +38,7 @@ body {
     display: -webkit-flex;
     display: flex;
   background-color: #fff;
+  -webkit-align-items: flex-start;
   -ms-flex-align: start;
   align-items: flex-start;
   height: 50%;
